<!-- 
 * Copyright © 2013 Sisinty Sasmita Patra
 
 * Pixtyle is an Open source android application where you can add different styles to your pictures.
 * This Program is a free software: you can redistribute it and/or modify under the terms of the GNU 
 * General Public License as published by the Free Software Foundation, either version 3 of the 
 * license or, at your option any later version. This Program is distributed in the hope that it 
 * will be useful, but WITHOUT ANY WARRANTY;  without even the implied warranty of MERCHANTABILITY 
 * or FITNESS FOR A PARTICULAR PURPOSE.
 
 * See the GNU GENERAL PUBLIC LICENSE for more details: http://www.gnu.org/licenses/.
 * Please see the License file in this distribution for license terms.
 * Link to the License file: http://github.com/sasmita/Pixtyle/blob/master/License.txt
 
 * Author: Sisinty Sasmita Patra
 * Email:  spatra@pdx.edu
 * Repository Link: https://github.com/sasmita/Pixtyle
 -->
<resources>

    <string name="app_name">Pixtyle</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="get_info">Black And White</string>
    <string name="get_photo"> Camera </string>
    <string name="img_description"> Image view for input and output </string>
    
    <string name="save_photo"> save </string>
    <string name="bw_style">Black &amp; White</string>
    <string name="invert_style"> Invert </string>

</resources>
