
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
    	android:layout_height="match_parent">
    
    <Button 
        android:id="@+id/button_callcamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/get_photo" />
    
    <ImageView 
        android:id="@+id/display"
        android:contentDescription="@string/img_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_callcamera"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="21dp"
        android:src="@drawable/icon" />

        <Button
        android:id="@+id/button_saveimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:text="@string/save_photo" 
        android:layout_marginTop="18dp" 
        android:layout_toRightOf="@+id/button_callcamera"/>
    
    <Button
        android:id="@+id/button_bw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/display"
        android:layout_marginLeft="21dp"
        android:text="@string/bw_style" 
        android:layout_toRightOf="@+id/button_saveimg"/>
    
    <Button
        android:id="@+id/button_invert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:text="@string/invert_style" 
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@+id/button_bw" />
    

</RelativeLayout>
